<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
>
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.lhogie</groupId>
	<artifactId>byransha</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<properties>
		<maven.compiler.target>23</maven.compiler.target>
		<maven.compiler.source>23</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>io.github.lhogie</groupId>
			<artifactId>toools</artifactId>
			<version>master-SNAPSHOT</version>
		</dependency>
        <dependency>
            <groupId>com.upokecenter</groupId>
            <artifactId>cbor</artifactId>
            <version>5.0.0-alpha2</version>
        </dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>23</source>
					<target>23</target>
					<release>23</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<mainClass>byransha.web.WebServer</mainClass>
					<commandlineArgs
                    >-Dfile.encoding=UTF-8 appClass=byransha.labmodel.I3SApplication</commandlineArgs>
					<systemProperties>
                        <systemProperty>
                            <key>file.encoding</key>
                            <value>UTF-8</value>
                        </systemProperty>
                    </systemProperties>
                </configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>23</source>
                    <target>23</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
	</build>
</project>
